--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Happy Birthday!</title>
-
+   
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
   <link rel="stylesheet" href="styles/style.css" media="all">
@@ -15,14 +15,14 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">And Countdown begins:</h1>
-    <h1>""</h1>
+    <h1 id="head">Let the Countdown begins:</h1>
+    <h1></h1>
     <ul>
       <li><span id="day"></span>days</li>
       <li><span id="hour"></span>hours</li>
       <li><span id="minute"></span>minutes</li>
       <li><span id="second"></span>seconds</li>
-    </ul>
+    </ul>  
   </div>
   <div id="merrywrap" class="merrywrap">
     <canvas id="snowfall"></canvas>
