--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">Let the Countdown begins:</h1>
-    <h1></h1>
+    <h1>################################################################</h1>
+    <h1 id="head">Let the Countdown begin:</h1>
+    <h1>################################################################</h1>
     <ul>
       <li><span id="day"></span>days</li>
       <li><span id="hour"></span>hours</li>
