--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
   <title>Happy Birthday!</title>
-   
+  <h3>Tera Happy Birthday</h3>
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
   <link rel="stylesheet" href="styles/style.css" media="all">
@@ -15,9 +15,8 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1>################################################################</h1>
-    <h1 id="head">Let the Countdown begin:</h1>
-    <h1>################################################################</h1>
+    
+    <h1 id="head">Let the Countdown begin</h1>
     <ul>
       <li><span id="day"></span>days</li>
       <li><span id="hour"></span>hours</li>
