--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
   <canvas id=c></canvas>
-  <canvas id="confetti"></canvas>
+  <canvas id="confetti"></canvas>  
+  <h3>Tera Happy Birthday</h3>
+ 
   <div class="container" id="count">
     
     <h1 id="head">Let the Countdown begin</h1>
